--- a/.github/workflows/check-bash-version.yml
+++ b/.github/workflows/check-bash-version.yml
@@ -24,5 +24,5 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: bash -v
+      run: bash --version
       shell: bash
